# libMidifilePerformer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.json  webpack.config.js
resources/: NOTES.md
src/: CMakeLists.txt  Embindings.cpp
src/core/: Chronology.h  Event.h  Events.h  Renderer.h
src/cpp/impl/: ChordRendering.cpp  ChordVelocityMapping.cpp  UnityDllWrapper.cpp  VoiceStealing.cpp
src/impl/: ChordVelocityMapping.cpp  ChordVelocityMapping.h  MFPEvents.h  MFPRenderer.h  MidiEvents.h  MidiRenderer.h
src/include/core/: Chronology.h  Events.h  Renderer.h
src/include/impl/: AbstractPerformer.h  AntiVoiceStealing.h  ChordRendering.h  ChordVelocityMapping.h  GenericPerformer.h  MFPEvents.h  MFPRenderer.h  NoteAndCommandEvents.h  SequencePerformer.h  StreamPerformer.h  UnityDllWrapper.h  VoiceStealing.h
test/: CMakeLists.txt  chordRendering.test.cpp  chordVelocityMapping.test.cpp  invalidMapEntries.test.cpp  mfp_test.js  midiFiles.test.cpp  scoresAndCommands.test.cpp  utilities.h  voiceStealing.test.cpp
test/simple/: mfp_test_node.js
test/tape/: basic-cases.js
